--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "@sveltejs/adapter-node": "^1.0.0-next.29",
     "@sveltejs/kit": "next",
     "aws-sdk": "^2.932.0",
-    "duckdb": "^0.2.7",
+    "duckdb": "^0.2.8-dev744.0",
     "eslint": "^7.22.0",
     "eslint-plugin-svelte3": "^3.2.0",
     "mock-aws-s3": "^4.0.2",
     "nock": "^13.1.0",
-    "svelte": "^3.34.0"
+    "svelte": "^3.34.0",
+    "svelte-loading-spinners": "^0.1.7"
   },
   "type": "module",
   "dependencies": {
