--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@sveltejs/adapter-node": "^1.0.0-next.29",
     "@sveltejs/kit": "next",
     "aws-sdk": "^2.932.0",
-    "duckdb": "^0.2.8-dev744.0",
     "eslint": "^7.22.0",
     "eslint-plugin-svelte3": "^3.2.0",
     "mock-aws-s3": "^4.0.2",
@@ -23,6 +22,7 @@
   "dependencies": {
     "@fontsource/fira-mono": "^4.2.2",
     "@lukeed/uuid": "^2.0.0",
-    "cookie": "^0.4.1"
+    "cookie": "^0.4.1",
+    "pg": "^8.6.0"
   }
 }
