--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@fontsource/fira-mono": "^4.2.2",
     "@lukeed/uuid": "^2.0.0",
+    "color": "^4.0.0",
     "cookie": "^0.4.1",
     "d3-interpolate": "^3.0.1",
     "pg": "^8.6.0"
