--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@sveltejs/adapter-node": "^1.0.0-next.29",
     "@sveltejs/kit": "next",
     "aws-sdk": "^2.932.0",
+    "d3-interpolate": "^2.0.1",
     "eslint": "^7.22.0",
     "eslint-plugin-svelte3": "^3.2.0",
     "mock-aws-s3": "^4.0.2",
     "nock": "^13.1.0",
+    "pg": "^8.6.0",
     "svelte": "^3.34.0",
     "svelte-loading-spinners": "^0.1.7"
   },
@@ -22,9 +24,6 @@
   "dependencies": {
     "@fontsource/fira-mono": "^4.2.2",
     "@lukeed/uuid": "^2.0.0",
-    "color": "^4.0.0",
-    "cookie": "^0.4.1",
-    "d3-interpolate": "^3.0.1",
-    "pg": "^8.6.0"
+    "cookie": "^0.4.1"
   }
 }
