--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "eslint-plugin-svelte3": "^3.2.0",
     "mock-aws-s3": "^4.0.2",
     "nock": "^13.1.0",
-    "pg": "^8.6.0",
+    "pg": "^8.7.1",
+    "pg-native": "^3.0.0",
     "svelte": "^3.34.0",
-    "svelte-loading-spinners": "^0.1.7"
+    "svelte-loading-spinners": "^0.1.7",
+    "svelte-preprocess": "^4.8.0"
   },
   "type": "module",
   "dependencies": {
