--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint --ignore-path .gitignore ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-node": "^1.0.0-next.29",
+    "@sveltejs/adapter-node": "^1.0.0-next.45",
     "@sveltejs/kit": "next",
     "aws-sdk": "^2.932.0",
     "d3-interpolate": "^2.0.1",
@@ -26,6 +26,8 @@
     "@fontsource/fira-mono": "^4.2.2",
     "@lukeed/uuid": "^2.0.0",
     "cookie": "^0.4.1",
-    "pg-native": "^3.0.0"
+    "pg-native": "^3.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
   }
 }
